@@ -1360,6 +1360,20 @@ class LanguageFr extends LanguageUtf8 {
 		return $wgNamespaceNamesFr;
 	}
 
+
+	function getNsIndex( $text ) {
+		global $wgNamespaceNamesFr, $wgSitename;
+
+		foreach ( $wgNamespaceNamesFr as $i => $n ) {
+			if ( 0 == strcasecmp( $n, $text ) ) { return $i; }
+		}
+		if( $wgSitename == "Wikipédia" ) {
+			if( 0 == strcasecmp( "Wikipedia", $text ) ) return 4;
+			if( 0 == strcasecmp( "Discussion_Wikipedia", $text ) ) return 5;
+		}
+		return false;
+	}
+
 	function getQuickbarSettings() {
 		global $wgQuickbarSettingsFr;
 		return $wgQuickbarSettingsFr;
